--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-packages-tree",
+  "name": "github-packages-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
